--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index1.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "dev" : "node bin/dev.js"
   },
   "keywords": [],
   "author": "",
@@ -14,5 +15,8 @@
     "discord.js": "^12.5.3",
     "node-fetch": "^2.6.1",
     "pretty-ms": "^7.0.1"
+  },
+  "devDependencies": {
+    "dotenv": "^10.0.0"
   }
 }
