--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index1.js",
   "scripts": {
     "start": "node index.js",
-    "dev" : "node bin/dev.js"
+    "dev" : "nodemon bin/dev.js"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +17,7 @@
     "pretty-ms": "^7.0.1"
   },
   "devDependencies": {
-    "dotenv": "^10.0.0"
+    "dotenv": "^10.0.0",
+    "nodemon": "^2.0.12"
   }
 }
