--- a/package.json
+++ b/package.json
@@ -2,22 +2,27 @@
   "name": "discord-bot",
   "version": "1.0.0",
   "description": "",
-  "main": "index1.js",
+  "main": "build/index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev" : "nodemon bin/dev.js"
+    "prestart":"tsc",
+    "start": "node build/index.js",
+    
+    "predev":"tsc",
+    "dev" : "node bin/dev.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "typescript": "^4.3.5",
     "discord-buttons": "^4.0.0",
     "discord.js": "^12.5.3",
     "node-fetch": "^2.6.1",
-    "pretty-ms": "^7.0.1"
+    "pretty-ms": "^7.0.1" 
   },
   "devDependencies": {
-    "dotenv": "^10.0.0",
-    "nodemon": "^2.0.12"
+    "@types/node": "^14.0.20",
+    "@types/node-fetch": "^2.5.11",
+    "dotenv": "^10.0.0"
   }
 }
