--- a/package.json
+++ b/package.json
@@ -4,21 +4,21 @@
   "description": "",
   "main": "build/index.js",
   "scripts": {
-    "prestart":"tsc",
+    "build":"tsc",
+    "prestart": "npm run build",
     "start": "node build/index.js",
-    
-    "predev":"tsc",
-    "dev" : "node bin/dev.js"
+    "predev": "npm run build",
+    "dev": "node bin/dev.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "typescript": "^4.3.5",
     "discord-buttons": "^4.0.0",
     "discord.js": "^12.5.3",
     "node-fetch": "^2.6.1",
-    "pretty-ms": "^7.0.1" 
+    "pretty-ms": "^7.0.1",
+    "typescript": "^4.3.5"
   },
   "devDependencies": {
     "@types/node": "^14.0.20",
