--- a/package.json
+++ b/package.json
@@ -4,11 +4,9 @@
   "description": "",
   "main": "build/index.js",
   "scripts": {
-    "build":"tsc",
+    "build": "tsc",
     "prestart": "npm run build",
-    "start": "node build/index.js",
-    "predev": "npm run build",
-    "dev": "node bin/dev.js"
+    "start": "node bin/run.js"
   },
   "keywords": [],
   "author": "",
@@ -18,11 +16,12 @@
     "discord.js": "^12.5.3",
     "node-fetch": "^2.6.1",
     "pretty-ms": "^7.0.1",
+    "socket.io": "^4.1.3",
     "typescript": "^4.3.5"
   },
   "devDependencies": {
-    "@types/node": "^14.0.20",
-    "@types/node-fetch": "^2.5.11",
+    "@types/node": "^14.17.6",
+    "@types/node-fetch": "^2.5.12",
     "dotenv": "^10.0.0"
   }
 }
