--- a/package.json
+++ b/package.json
@@ -1,26 +1,37 @@
 {
-  "name": "discord-bot",
+  "name": "discord-bot-glitchi",
   "version": "1.0.0",
-  "description": "",
-  "main": "build/index.js",
+  "description": "An open source Discord bot",
+  "main": "setup.js",
   "scripts": {
     "build": "tsc",
     "prestart": "npm run build",
-    "start": "node bin/run.js"
+    "start": "node setup.js",
+    "test": "node setup.js -c"
   },
-  "keywords": [],
-  "author": "",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/RajnishAnand/discord-bot-glitchi"
+  },
+  "keywords": [
+    "discord",
+    "bot",
+    "glitchi",
+    "node",
+    "typescript"
+  ],
+  "author": "Rajnish Anand",
   "license": "ISC",
   "dependencies": {
-    "discord-buttons": "^4.0.0",
     "discord.js": "^12.5.3",
+    "mathjs": "^9.4.4",
     "node-fetch": "^2.6.1",
     "pretty-ms": "^7.0.1",
     "socket.io": "^4.1.3",
     "typescript": "^4.3.5"
   },
   "devDependencies": {
-    "@types/node": "^14.17.6",
+    "@types/node": "^14.17.9",
     "@types/node-fetch": "^2.5.12",
     "dotenv": "^10.0.0"
   }
