--- a/config.json
+++ b/config.json
@@ -16,7 +16,7 @@
     "cry": "<a:sadGuitar:869172267869949962>",
     "aha": "<a:oHo:858172419792961657>",
     "nono": "<:noNOno:831705934648573982>",
-    "yus": "<:yusSor:862567696898195476>",
+    "yus": "<a:yusSor:862567696898195476>",
     "sneak": "<:sneakPeek:852714216057733180>",
     "dance": "<a:dancingBear:855432117180432384>",
     "ping": "<a:pingPong:855558851726409759>",
