--- a/config.json
+++ b/config.json
@@ -15,7 +15,7 @@
     "sad": "<:sed:860576595039354931>",
     "ok": "<:ok:861456928184860672>",
     "cry": "<a:sadGuitar:869172267869949962>",
-    "aha": "<a:oHo:858172419792961657>",
+    "aha": "<a:aha:858172419792961657>",
     "nono": "<:noNOno:831705934648573982>",
     "yus": "<a:yusSor:862567696898195476>",
     "sneak": "<:sneakPeek:852714216057733180>",
