--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
   "dependencies": {
     "discord.js": "^12.5.3",
     "mathjs": "^9.4.4",
+    "mongodb": "^4.1.0",
     "node-fetch": "^2.6.1",
     "pretty-ms": "^7.0.1",
-    "socket.io": "^4.1.3",
     "typescript": "^4.3.5"
   },
   "devDependencies": {
