--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "tsc",
     "prestart": "npm run build",
     "start": "node setup.js",
-    "test": "node setup.js -c"
+    "dev" : "node setup.js"
   },
   "repository": {
     "type": "git",
@@ -23,7 +23,10 @@
   "author": "Rajnish Anand",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^12.5.3",
+    "@discordjs/builders": "^0.6.0",
+    "@discordjs/rest": "^0.1.0-canary.0",
+    "discord-api-types": "^0.22.0",
+    "discord.js": "^13.1.0",
     "mathjs": "^9.4.4",
     "mongodb": "^4.1.0",
     "node-fetch": "^2.6.1",
