--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "tsc",
     "prestart": "npm run build",
     "start": "node setup.js",
-    "dev" : "node setup.js"
+    "dev" : "node setup.js",
+    "repl": "npm i node@16&&npm config set prefix=$(pwd)/node_modules/node&&export PATH=$(pwd)/node_modules/node/bin:$PATH"
   },
   "repository": {
     "type": "git",
