--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "tsc",
     "prestart": "npm run build",
     "start": "node setup.js",
-    "dev" : "node setup.js"
+    "dev": "node setup.js"
   },
   "repository": {
     "type": "git",
@@ -25,6 +25,7 @@
   "dependencies": {
     "@discordjs/builders": "^0.6.0",
     "@discordjs/rest": "^0.1.0-canary.0",
+    "content-type": "^1.0.4",
     "discord-api-types": "^0.22.0",
     "discord.js": "^13.1.0",
     "mathjs": "^9.4.4",
@@ -34,6 +35,7 @@
     "typescript": "^4.3.5"
   },
   "devDependencies": {
+    "@types/content-type": "^1.1.5",
     "@types/node": "^14.17.9",
     "@types/node-fetch": "^2.5.12",
     "dotenv": "^10.0.0"
