--- a/package.json
+++ b/package.json
@@ -3,8 +3,14 @@
   "version": "1.0.0",
   "description": "An open source Discord bot",
   "main": "setup.js",
+  "imports":{
+    "#libs/*.js":"./build/libs/*.js",
+    "#libs/pagination":"./build/libs/pagination/index.js",
+    "#api/*.js":"./build/APIs/*.js",
+    "#api/@sololearn":"./build/APIs/@sololearn/index.js"
+  },
   "scripts": {
-    "build": "tsc",
+    "build": "tsc -b v13",
     "prestart": "npm run build",
     "start": "node setup.js",
     "dev": "node setup.js"
@@ -29,10 +35,11 @@
     "discord-api-types": "^0.22.0",
     "discord.js": "^13.1.0",
     "mathjs": "^9.4.4",
-    "mongodb": "^4.1.0",
+    "mongoose": "^6.0.12",
     "node-fetch": "^2.6.1",
     "pretty-ms": "^7.0.1",
-    "typescript": "^4.3.5"
+    "typescript": "^4.3.5",
+    "xmorse": "^1.0.0"
   },
   "devDependencies": {
     "@types/content-type": "^1.1.5",
