Update : Updated some structures

--- a/v13/tsconfig.json
+++ b/v13/tsconfig.json
@@ -9,6 +9,7 @@
     "paths": {
       "#api/*": ["APIs/*"],
       "#libs/*": ["libs/*"],
+      "#types/*": ["typings/*"]
     }
   },
   //"include":["./*"],
