--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "description": "An open source Discord bot",
   "main": "setup.js",
-  "imports":{
-    "#libs/*.js":"./build/libs/*.js",
-    "#libs/pagination":"./build/libs/pagination/index.js",
-    "#api/*.js":"./build/APIs/*.js",
-    "#api/@sololearn":"./build/APIs/@sololearn/index.js"
+  "imports": {
+    "#libs/*.js": "./build/libs/*.js",
+    "#libs/pagination": "./build/libs/pagination/index.js",
+    "#api/*.js": "./build/APIs/*.js",
+    "#api/@sololearn": "./build/APIs/@sololearn/index.js"
   },
   "scripts": {
     "build": "tsc -b v13",
@@ -34,12 +34,12 @@
     "content-type": "^1.0.4",
     "discord-api-types": "^0.22.0",
     "discord.js": "^13.1.0",
+    "firebase-admin": "^10.0.0",
     "mathjs": "^9.4.4",
-    "mongoose": "^6.0.12",
+    "morse-node": "^0.1.1",
     "node-fetch": "^2.6.1",
     "pretty-ms": "^7.0.1",
-    "typescript": "^4.3.5",
-    "xmorse": "^1.0.0"
+    "typescript": "^4.3.5"
   },
   "devDependencies": {
     "@types/content-type": "^1.1.5",
