--- a/v13/tsconfig.json
+++ b/v13/tsconfig.json
@@ -8,7 +8,7 @@
     
     "paths": {
       "#api/*": ["APIs/*"],
-      "#libs/*": ["libs/*"],
+      "#libs": ["libs/index"],
       "#types/*": ["typings/*"]
     }
   },
