--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "morse-node": "^0.1.1",
     "node-fetch": "^2.6.1",
     "pretty-ms": "^7.0.1",
-    "typescript": "^4.3.5"
+    "skia-canvas": "^0.9.28",
+    "typescript": "^4.3.5",
+    "vm2": "^3.9.5"
   },
   "devDependencies": {
     "@types/content-type": "^1.1.5",
