add: added protected run option

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build": "tsc -b v13",
     "prestart": "npm run build",
     "start": "node build/index.js",
-    "dev": "node build/index.js"
+    "dev": "node build/index.js",
+    "protected" : "PROTECTED=1 npm start"
   },
   "repository": {
     "type": "git",
