--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"start": "node build/index.js",
 		"dev": "node build/index.js",
 		"protected": "PROTECTED=1 npm start",
-		"format": "prettier --write --loglevel=warn \"src/**/*.{js,ts,json}\""
+		"format": "prettier --write --loglevel=warn \"v13/**/*.{js,ts,json}\""
 	},
 	"repository": {
 		"type": "git",
