🥲update: v14 so many changes at once

--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
   },
   "scripts": {
     "prepare": "husky install",
-    "build": "tsc -b v13",
-    "prestart": "npm run build",
+    "build": "tsc -b v14",
+    "prestart": "yarn build",
     "start": "node build/index.js",
     "dev": "node build/index.js",
     "protected": "PROTECTED=1 npm start",
-    "format": "prettier --write --loglevel=warn \"v13/**/*.{js,ts,json}\""
+    "format": "prettier --write --loglevel=warn \"v14/**/*.{js,ts,json}\""
   },
   "repository": {
     "type": "git",
@@ -32,13 +32,13 @@
   "dependencies": {
     "cbparser": "^1.0.4",
     "content-type": "^1.0.4",
-    "discord.js": "^13.7.0",
-    "mathjs": "^9.4.4",
+    "discord.js": "^14.3.0",
+    "mathjs": "^11.1.0",
     "morse-node": "^0.1.1",
     "pretty-ms": "^7.0.1",
-    "skia-canvas": "^0.9.30",
-    "typescript": "^4.3.5",
-    "vm2": "^3.9.6"
+    "skia-canvas": "^1.0.0",
+    "typescript": "^4.8.2",
+    "vm2": "^3.9.11"
   },
   "devDependencies": {
     "@types/content-type": "^1.1.5",
