--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "discord.js": "^14.3.0",
     "mathjs": "^11.1.0",
     "morse-node": "^0.1.1",
+    "node-fetch": "2",
     "pretty-ms": "^7.0.1",
     "skia-canvas": "^1.0.0",
     "typescript": "^4.3.5",
@@ -43,6 +44,7 @@
   "devDependencies": {
     "@types/content-type": "^1.1.5",
     "@types/node": "^18.11.7",
+    "@types/node-fetch": "^2.6.2",
     "dotenv": "^10.0.0",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.2",
