--- a/package.json
+++ b/package.json
@@ -42,6 +42,9 @@
     "typescript": "^4.3.5",
     "vm2": "^3.9.11"
   },
+  "resolutions": {
+    "discord-api-types": "0.37.20"
+  },
   "devDependencies": {
     "@types/content-type": "^1.1.5",
     "@types/node": "^18.11.7",
