--- a/package.json
+++ b/package.json
@@ -35,14 +35,14 @@
     "bad-words": "^3.0.4",
     "cbparser": "^1.0.4",
     "content-type": "^1.0.4",
-    "discord.js": "^14.3.0",
+    "discord.js": "14.9.0",
     "mathjs": "^11.1.0",
     "morse-node": "^0.1.1",
     "node-fetch": "2.6.9",
-    "pretty-ms": "^7.0.1",
+    "pretty-ms": "7.0.1",
     "skia-canvas": "^1.0.0",
     "typescript": "^5.0.4",
-    "vm2": "^3.9.11"
+    "vm2": "^3.9.16"
   },
   "devDependencies": {
     "@types/bad-words": "^3.0.1",
